[package]
name = "dbcat"
version = "0.1.3"
edition = "2021"
authors = ["Nishant Joshi <joshinishant@duck.com>"]
description = "A *cat(1)* equivalent for viewing sqlite database."
license-file = "LICENSE"
license = "MIT"
homepage = "https://github.com/nishantjoshi00/dbcat"
repository = "https://github.com/nishantjoshi00/dbcat"
keywords = ["cli", "tool", "executable", "sqlite"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.14", features = [ "derive" ] }
sqlite = "0.26.0"
cli-table = "0.4.6"
atty = "0.2.14"
colorize = "0.1.0"